Changelog
=========

1.0b5 (unreleased)
------------------

- Don't run the setuptools egg_info command as part of running a template.
  This avoids installing package dependencies in ways that can be problematic.
  [davisagli]

- Refactor code in the templer control script to help ease re-use by templer
  applications like ZopeSkel
  [cewing]

1.0b4 May 17, 2012
------------------

- Refactored test setup code for better sharing across packages
  [cewing]

- Fixed bug in test setup exposed by mixing doc and non-doc tests using
  os.getcwd()
  [cewing]

- Fix packaging problems and normalize setup.py
  [hvelarde]

- Convert to unittest2 and remove deprecated test assertion aliases
  [hvelarde]

- Restore support for localcommands as were present in ZopeSkel.  Improve
  localcommands by making them optional
  [cewing]

- Provide exit so you can bail from a template run cleanly.  Improve exit 
  conditions throughout the templer script
  [cewing]

- Fixed long-standing bug in tests that showed subpackages failing when they
  in fact succeeded
  [Lazaro Clapp]

- Factor structures code into a separate method so we can use it in vars, too
  [cewing]

1.0b3 October 6, 2011
---------------------

- relicense as MIT to keep in sync with ZopeSkel as its internals are replaced
  [cewing]

1.0b2 December 8, 2010
----------------------

- Fixed bug in structure system that broke template rendering when a template 
  had no license 
  [Cris Ewing]

- Moved zc.buildout template recipe into new package templer.buildout
  [Cris Ewing]

- Improved consistency of how templates treat 'long_description' in setup.py
  [Cris Ewing]

- Fixed documentation references to the zopeskel script (we will call the script
  'templer' when used from the templer packages.)
  [Cris Ewing]

1.0b1 December 1, 2010
----------------------

- Added structure system for better isolation of shared structural elements and
  improved maintainability
  [Cris Ewing]
