@@ -4,6 +4,10 @@ Changelog
 1.0b5 (unreleased)
 ------------------
 
+- Local commands can now be run using ``bin/templer add``
+  if templer.localcommands is present.
+  [davisagli]
+
 - Don't run the setuptools egg_info command as part of running a template.
   This avoids installing package dependencies in ways that can be problematic.
   [davisagli]
